# wsl-clip-bridge

./: .gitattributes  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  lefthook.yml  mise.toml  release-plz.toml
.github/workflows/: ci.yml  release.yml
config/: config.toml.example
scripts/: install-wsl.sh  setup.ps1
src/: main.rs
