[package]
name = "wsl-clip-bridge"
version = "1.1.1"
edition = "2024"
rust-version = "1.92"
description = "Claude Code paste helper for WSL: decodes WSLg BMPs into PNG via xclip shim"
repository = "https://github.com/camjac251/wsl-clip-bridge"
license = "MIT"
keywords = ["wsl", "clipboard", "xclip", "claude-code", "wslg"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[[bin]]
name = "xclip"
path = "src/main.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "bmp"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
